2005-06-15  Miles Bader  <miles@gnu.org>

	* progmodes/cperl-mode.el (cperl-init-faces): Use literal cperl
	faces instead of (non-existent) variables.

2005-06-14  Miles Bader  <miles@gnu.org>

	* progmodes/ld-script.el (ld-script-location-counter):
	Remove "-face" suffix from face name.
	(ld-script-location-counter-face): 
	New backward-compatibility alias for renamed face.
	(ld-script-location-counter-face): Use renamed face.

	* progmodes/cperl-mode.el (cperl-nonoverridable, cperl-array)
	(cperl-hash): Remove "-face" suffix from face names.
	(cperl-nonoverridable-face, cperl-array-face, cperl-hash-face):
	New backward-compatibility aliases for renamed faces.
	(cperl-find-pods-heres, cperl-init-faces, cperl-ps-print-init)
	(cperl-ps-print-face-properties): Use renamed cperl-mode faces.

	* progmodes/which-func.el (which-func): Remove "-face" suffix from face
	name.
	(which-func-face): New backward-compatibility alias for renamed face.
	(which-func-format): Use renamed which-func face.

	* progmodes/vhdl-mode.el (vhdl-prompt, vhdl-attribute, vhdl-enumvalue)
	(vhdl-function, vhdl-directive, vhdl-reserved-word)
	(vhdl-translate-off): Remove "-face" suffix and "font-lock-" from face
	names.
	(vhdl-speedbar-entity, vhdl-speedbar-architecture)
	(vhdl-speedbar-configuration, vhdl-speedbar-package)
	(vhdl-speedbar-library, vhdl-speedbar-instantiation)
	(vhdl-speedbar-subprogram, vhdl-speedbar-entity-selected)
	(vhdl-speedbar-architecture-selected)
	(vhdl-speedbar-configuration-selected)
	(vhdl-speedbar-package-selected)
	(vhdl-speedbar-instantiation-selected): Remove "-face" suffix from face
	names.
	(vhdl-font-lock-keywords-2, vhdl-font-lock-keywords-5):
	Use renamed faces.
	(vhdl-prompt-face, vhdl-attribute-face, vhdl-enumvalue-face)
	(vhdl-function-face, vhdl-directive-face, vhdl-reserved-words-face)
	(vhdl-translate-off-face): Variables renamed to remove "font-lock-".
	Use renamed faces.
	(syntax-alist): Don't use "font-lock-" or "-face" in generated face
	names.